--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "lsof -P | grep ':3000' | awk '{print $2}' | xargs kill -9 && node app.js"
+    "start": "node app.js"
   },
   "author": "",
   "license": "ISC",
