--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
   "dependencies": {
     "@clickhouse/client": "^0.0.15",
     "clickhouse": "^2.6.0",
-    "cors": "^2.8.5",
+    "cors": "^2.8.5"
   },
   "devDependencies": {
     "body-parser": "^1.19.0",
