--- a/package.json
+++ b/package.json
@@ -4,7 +4,6 @@
   "description": "Example of how to deploy a Express.js Netlify app.",
   "main": "functions/server.js",
   "scripts": {
-    "build": "netlify-lambda build express",
     "start": "nodemon app.js"
   },
   "repository": {
@@ -24,13 +23,10 @@
   "dependencies": {
     "@clickhouse/client": "^0.0.15",
     "clickhouse": "^2.6.0",
-    "cors": "^2.8.5"
-  },
-  "devDependencies": {
-    "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
+     "body-parser": "^1.19.0",
     "express": "^4.17.1",
-    "netlify-lambda": "^1.6.3",
-    "nodemon": "^1.19.2",
-    "serverless-http": "^2.3.0"
+    "nodemon": "^1.19.2"
   }
+  
 }
