--- a/package.json
+++ b/package.json
@@ -4,29 +4,23 @@
   "description": "Example of how to deploy a Express.js Netlify app.",
   "main": "functions/server.js",
   "scripts": {
-    "start": "nodemon app.js"
+    "start": "nodemon index.js"
   },
   "repository": {
-    "type": "git",
-    "url": "git+https://github.com/neverendingqs/netlify-express.git"
+    "type": "git"
   },
   "keywords": [
     "netlify",
     "express.js"
   ],
-  "author": "neverendingqs",
+  "author": "abc",
   "license": "Apache-2.0",
-  "bugs": {
-    "url": "https://github.com/neverendingqs/netlify-express/issues"
-  },
-  "homepage": "https://github.com/neverendingqs/netlify-express#readme",
   "dependencies": {
     "@clickhouse/client": "^0.0.15",
     "clickhouse": "^2.6.0",
     "cors": "^2.8.5",
-     "body-parser": "^1.19.0",
+    "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "nodemon": "^1.19.2"
   }
-  
 }
